changed color and fixed spacing

--- a/src/styles/product.module.css
+++ b/src/styles/product.module.css
@@ -1,33 +1,34 @@
 .productImage::before {
     content: "View Product";
     position: absolute;
-    padding: .5rem 1rem;
-    background: #fff;
-    box-shadow: 0 1rem 1rem -.5rem #4e0b4b;
-    color: #4e0b4b;
-    border-radius: .5rem;
+    padding: 0.5rem 1rem;
+    background: #4e0b4b;
+    box-shadow: 0 1rem 1rem -0.5rem #4e0b4b71;
+    color: #fff;
+    border-radius: 0.5rem;
     z-index: 3;
     transform: translate(-50%, -25%);
     opacity: 0;
     top: 50%;
-    right: 50%;
+    left: 50%;
     white-space: nowrap;
-    transition: all .2s;
-}
-.productImage::after{
+    transition: all 0.2s;
+  }
+  .productImage::after {
     content: "";
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 2;
-    background: #4e0b4b;
+    background: #4e0b4b57;
     opacity: 0;
-    transition: all .2s;
-}
-.productImage:hover::before {
+    transition: all 0.2s;
+  }
+  .productImage:hover::before {
     transform: translate(-50%, -50%);
     opacity: 1;
-}
-.productImage:hover::after {
+  }
+  .productImage:hover::after {
     opacity: 1;
-}
+  }
+  
